@@ -67,12 +67,3 @@
  - mobile theme for webmail
 	- release
 
- - option to BCC sent mail - FS#3450
-	- Setup in installer
-	- Mass domain update
-	- Renaming domain
-	- Backup and restore
-	- Template
-	- Enable when creating, disable when deleting
-	- GPL version
-	- Help for template, edit_mail.cgi and config option
