@@ -1,0 +1,10 @@
+<header>Allow automatic BCCing of outgoing email?</header>
+
+When this option is set to <b>Yes</b>, you will be able to configure each
+virtual server so that email sent by it's mail users is BCCd to a separate
+address. However, this will only work when the Postfix mail server is being
+used and if the <tt>sender_bcc_maps</tt> directive is set in its
+<tt>main.cf</tt> file. <p>
+
+<footer>
+
