@@ -1,0 +1,8 @@
+<header>Default outgoing BCC address</header>
+
+This sets the default BCC address for newly created virtual servers. If set,
+all email sent by mailboxes in the new domain will be automatically BCCd to
+whatever address you enter - assuming that your mail server supports it. <p>
+
+<footer>
+
